makefile and path

--- a/CC3K/Makefile
+++ b/CC3K/Makefile
@@ -3,7 +3,7 @@ CXX=g++
 CXXFLAGS=-std=c++14 -Wextra -Wpedantic -Wall -Werror=vla -MMD -g
 OBJECTS=main.o character.o enemy.o object.o orc.o player.o shade.o dwarf.o vampire.o halfling.o goblin.o nullcell.o bridge.o cell.o chamber.o grid.o item.o potion.o factory.o drow.o elf.o human.o floorcell.o doorcell.o resHP.o poiHP.o gold.o dragon.o merchant.o troll.o plusAtk.o plusDef.o minAtk.o minDef.o
 DEPENDS=${OBJECTS:.o=.d}
-EXEC=a
+EXEC=cc3k
 
 
 ${EXEC}: ${OBJECTS}
